initiate context management api with hook implementation (#4345)
* initiate context management api with hook implementation

Signed-off-by: Mingshi Liu <mingshl@amazon.com>

* apply spotless

Signed-off-by: Mingshi Liu <mingshl@amazon.com>

---------

Signed-off-by: Mingshi Liu <mingshl@amazon.com>