@@ -63,7 +63,11 @@ import org.opensearch.ml.common.MLMemoryType;
 import org.opensearch.ml.common.agent.LLMSpec;
 import org.opensearch.ml.common.agent.MLAgent;
 import org.opensearch.ml.common.agent.MLToolSpec;
+import org.opensearch.ml.common.contextmanager.ContextManagerContext;
 import org.opensearch.ml.common.conversation.Interaction;
+import org.opensearch.ml.common.hooks.EnhancedPostToolEvent;
+import org.opensearch.ml.common.hooks.HookRegistry;
+import org.opensearch.ml.common.hooks.PreLLMEvent;
 import org.opensearch.ml.common.memory.Memory;
 import org.opensearch.ml.common.memory.Message;
 import org.opensearch.ml.common.output.model.ModelTensor;
@@ -78,8 +82,6 @@ import org.opensearch.ml.engine.function_calling.FunctionCallingFactory;
 import org.opensearch.ml.engine.function_calling.LLMMessage;
 import org.opensearch.ml.engine.memory.ConversationIndexMessage;
 import org.opensearch.ml.engine.tools.MLModelTool;
-import org.opensearch.ml.repackage.com.google.common.collect.ImmutableMap;
-import org.opensearch.ml.repackage.com.google.common.collect.Lists;
 import org.opensearch.remote.metadata.client.SdkClient;
 import org.opensearch.transport.TransportChannel;
 import org.opensearch.transport.client.Client;
@@ -138,6 +140,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
     private SdkClient sdkClient;
     private Encryptor encryptor;
     private StreamingWrapper streamingWrapper;
+    private static HookRegistry hookRegistry;
 
     public MLChatAgentRunner(
         Client client,
@@ -149,6 +152,20 @@ public class MLChatAgentRunner implements MLAgentRunner {
         SdkClient sdkClient,
         Encryptor encryptor
     ) {
+        this(client, settings, clusterService, xContentRegistry, toolFactories, memoryFactoryMap, sdkClient, encryptor, null);
+    }
+
+    public MLChatAgentRunner(
+        Client client,
+        Settings settings,
+        ClusterService clusterService,
+        NamedXContentRegistry xContentRegistry,
+        Map<String, Tool.Factory> toolFactories,
+        Map<String, Memory.Factory> memoryFactoryMap,
+        SdkClient sdkClient,
+        Encryptor encryptor,
+        HookRegistry hookRegistry
+    ) {
         this.client = client;
         this.settings = settings;
         this.clusterService = clusterService;
@@ -157,6 +174,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
         this.memoryFactoryMap = memoryFactoryMap;
         this.sdkClient = sdkClient;
         this.encryptor = encryptor;
+        this.hookRegistry = hookRegistry;
     }
 
     @Override
@@ -339,6 +357,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
                 if (finalI % 2 == 0) {
                     MLTaskResponse llmResponse = (MLTaskResponse) output;
                     ModelTensorOutput tmpModelTensorOutput = (ModelTensorOutput) llmResponse.getOutput();
+
                     List<String> llmResponsePatterns = gson.fromJson(tmpParameters.get("llm_response_pattern"), List.class);
                     Map<String, String> modelOutput = parseLLMOutput(
                         parameters,
@@ -457,6 +476,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
                         ((ActionListener<Object>) nextStepListener).onResponse(res);
                     }
                 } else {
+                    // filteredOutput is the POST Tool output
                     Object filteredOutput = filterToolOutput(lastToolParams, output);
                     addToolOutputToAddtionalInfo(toolSpecMap, lastAction, additionalInfo, filteredOutput);
 
@@ -485,11 +505,13 @@ public class MLChatAgentRunner implements MLAgentRunner {
                     newPrompt.set(substitutor.replace(finalPrompt));
                     tmpParameters.put(PROMPT, newPrompt.get());
                     if (!interactions.isEmpty()) {
-                        tmpParameters.put(INTERACTIONS, ", " + String.join(", ", interactions));
+                        String interactionsStr = String.join(", ", interactions);
+                        // Set the interactions parameter - this will be processed by context management
+                        tmpParameters.put(INTERACTIONS, ", " + interactionsStr);
                     }
 
                     sessionMsgAnswerBuilder.append(outputToOutputString(filteredOutput));
-                    streamingWrapper.sendToolResponse(outputToOutputString(output), sessionId, parentInteractionId);
+                    streamingWrapper.sendToolResponse(outputToOutputString(filteredOutput), sessionId, parentInteractionId);
                     traceTensors
                         .add(
                             ModelTensors
@@ -521,6 +543,10 @@ public class MLChatAgentRunner implements MLAgentRunner {
                         );
                         return;
                     }
+                    // Emit PRE_LLM hook event
+                    List<MLToolSpec> currentToolSpecs = new ArrayList<>(toolSpecMap.values());
+                    emitPreLLMHook(tmpParameters, interactions, currentToolSpecs, memory);
+
                     ActionRequest request = streamingWrapper.createPredictionRequest(llm, tmpParameters, tenantId);
                     streamingWrapper.executeRequest(request, (ActionListener<MLTaskResponse>) nextStepListener);
                 }
@@ -532,6 +558,11 @@ public class MLChatAgentRunner implements MLAgentRunner {
                 lastStepListener = nextStepListener;
             }
         }
+
+        // Emit PRE_LLM hook event for initial LLM call
+        List<MLToolSpec> initialToolSpecs = new ArrayList<>(toolSpecMap.values());
+        tmpParameters.put("_llm_model_id", llm.getModelId());
+        emitPreLLMHook(tmpParameters, interactions, initialToolSpecs, memory);
 
         ActionRequest request = streamingWrapper.createPredictionRequest(llm, tmpParameters, tenantId);
         streamingWrapper.executeRequest(request, firstListener);
@@ -584,7 +615,9 @@ public class MLChatAgentRunner implements MLAgentRunner {
                 List<String> list = (List<String>) additionalInfo.get(toolOutputKey);
                 list.add(outputString);
             } else {
-                additionalInfo.put(toolOutputKey, Lists.newArrayList(outputString));
+                List<String> newList = new ArrayList<>();
+                newList.add(outputString);
+                additionalInfo.put(toolOutputKey, newList);
             }
         }
     }
@@ -607,17 +640,25 @@ public class MLChatAgentRunner implements MLAgentRunner {
                 ActionListener<Object> toolListener = ActionListener.wrap(r -> {
                     if (functionCalling != null) {
                         String outputResponse = parseResponse(filterToolOutput(toolParams, r));
+
+                        // Emit POST_TOOL hook event after tool execution and process current tool output
+                        List<MLToolSpec> postToolSpecs = new ArrayList<>(toolSpecMap.values());
+                        String outputResponseAfterHook = emitPostToolHook(outputResponse, tmpParameters, postToolSpecs, null).toString();
+
                         List<Map<String, Object>> toolResults = List
-                            .of(Map.of(TOOL_CALL_ID, toolCallId, TOOL_RESULT, Map.of("text", outputResponse)));
+                            .of(Map.of(TOOL_CALL_ID, toolCallId, TOOL_RESULT, Map.of("text", outputResponseAfterHook)));
                         List<LLMMessage> llmMessages = functionCalling.supply(toolResults);
                         // TODO: support multiple tool calls at the same time so that multiple LLMMessages can be generated here
                         interactions.add(llmMessages.getFirst().getResponse());
                     } else {
+                        // Emit POST_TOOL hook event for non-function calling path
+                        List<MLToolSpec> postToolSpecs = new ArrayList<>(toolSpecMap.values());
+                        Object processedOutput = emitPostToolHook(r, tmpParameters, postToolSpecs, null);
                         interactions
                             .add(
                                 substitute(
                                     tmpParameters.get(INTERACTION_TEMPLATE_TOOL_RESPONSE),
-                                    Map.of(TOOL_CALL_ID, toolCallId, "tool_response", processTextDoc(StringUtils.toJson(r))),
+                                    Map.of(TOOL_CALL_ID, toolCallId, "tool_response", processTextDoc(StringUtils.toJson(processedOutput))),
                                     INTERACTIONS_PREFIX
                                 )
                             );
@@ -868,7 +909,7 @@ public class MLChatAgentRunner implements MLAgentRunner {
                     ModelTensor
                         .builder()
                         .name("response")
-                        .dataAsMap(ImmutableMap.of("response", finalAnswer2, ADDITIONAL_INFO_FIELD, additionalInfo))
+                        .dataAsMap(Map.of("response", finalAnswer2, ADDITIONAL_INFO_FIELD, additionalInfo))
                         .build()
                 )
         );
@@ -938,4 +979,241 @@ public class MLChatAgentRunner implements MLAgentRunner {
             memory.save(msgTemp, parentInteractionId, traceNumber.addAndGet(1), "LLM", listener);
         }
     }
+
+    /**
+     * Build ContextManagerContext for current tool output
+     */
+    private static ContextManagerContext buildContextManagerContextForToolOutput(
+        Object toolOutput,
+        Map<String, String> parameters,
+        List<MLToolSpec> toolSpecs,
+        Memory memory
+    ) {
+        ContextManagerContext.ContextManagerContextBuilder builder = ContextManagerContext.builder();
+
+        // Set system prompt
+        String systemPrompt = parameters.get(SYSTEM_PROMPT_FIELD);
+        if (systemPrompt != null) {
+            builder.systemPrompt(systemPrompt);
+        }
+
+        // Set user prompt
+        String userPrompt = parameters.get(MLAgentExecutor.QUESTION);
+        if (userPrompt != null) {
+            builder.userPrompt(userPrompt);
+        }
+
+        // Set tool configurations
+        if (toolSpecs != null) {
+            builder.toolConfigs(toolSpecs);
+        }
+
+        // Set current tool output as parameter for context managers to process
+        Map<String, Object> contextParameters = new HashMap<>();
+        contextParameters.putAll(parameters);
+        contextParameters.put("_current_tool_output", toolOutput);
+        builder.parameters(contextParameters);
+
+        return builder.build();
+    }
+
+    /**
+     * Extract processed tool output from context
+     */
+    private static Object extractProcessedToolOutput(ContextManagerContext context) {
+        if (context.getParameters() != null) {
+            return context.getParameters().get("_current_tool_output");
+        }
+        return null;
+    }
+
+    /**
+     * Build ContextManagerContext from current agent execution state
+     */
+    private ContextManagerContext buildContextManagerContext(
+        Map<String, String> parameters,
+        List<String> interactions,
+        List<MLToolSpec> toolSpecs,
+        Memory memory
+    ) {
+        ContextManagerContext.ContextManagerContextBuilder builder = ContextManagerContext.builder();
+
+        // Set system prompt
+        String systemPrompt = parameters.get(SYSTEM_PROMPT_FIELD);
+        if (systemPrompt != null) {
+            builder.systemPrompt(systemPrompt);
+        }
+
+        // Set user prompt
+        String userPrompt = parameters.get(MLAgentExecutor.QUESTION);
+        if (userPrompt != null) {
+            builder.userPrompt(userPrompt);
+        }
+
+        // Set chat history from memory
+        if (memory instanceof ConversationIndexMemory) {
+            // For now, we'll use the chat history that's already been processed
+            // In a more complete implementation, we might want to fetch fresh history
+            String chatHistory = parameters.get(CHAT_HISTORY);
+            if (chatHistory != null) {
+                // Convert chat history string back to interactions
+                // This is a simplified approach - in practice, you might want to store
+                // the original interactions list
+                List<Interaction> chatHistoryList = new ArrayList<>();
+                // For now, we'll leave this empty and rely on the existing chat history processing
+                builder.chatHistory(chatHistoryList);
+            }
+        }
+
+        // Set tool configurations
+        if (toolSpecs != null) {
+            builder.toolConfigs(toolSpecs);
+        }
+
+        // Set tool interactions
+        List<Map<String, Object>> toolInteractions = new ArrayList<>();
+        if (interactions != null) {
+            for (String interaction : interactions) {
+                Map<String, Object> toolInteraction = new HashMap<>();
+                toolInteraction.put("output", interaction);
+                toolInteractions.add(toolInteraction);
+            }
+        }
+        builder.toolInteractions(toolInteractions);
+
+        // Set additional parameters
+        Map<String, Object> contextParameters = new HashMap<>();
+        contextParameters.putAll(parameters);
+        builder.parameters(contextParameters);
+
+        return builder.build();
+    }
+
+    /**
+     * Emit POST_TOOL hook event and process current tool output
+     */
+    private static Object emitPostToolHook(Object toolOutput, Map<String, String> parameters, List<MLToolSpec> toolSpecs, Memory memory) {
+        log.info("MLChatAgentRunner.emitPostToolHook() called with hookRegistry: {}", hookRegistry != null ? "present" : "null");
+        if (hookRegistry != null) {
+            try {
+                // Create context with current tool output
+                ContextManagerContext context = buildContextManagerContextForToolOutput(toolOutput, parameters, toolSpecs, memory);
+                EnhancedPostToolEvent event = new EnhancedPostToolEvent(null, null, context, new HashMap<>());
+                log
+                    .info(
+                        "Emitting POST_TOOL hook event with context containing {} tool interactions",
+                        context.getToolInteractions() != null ? context.getToolInteractions().size() : 0
+                    );
+                hookRegistry.emit(event);
+
+                // Extract processed tool output from context
+                Object processedOutput = extractProcessedToolOutput(context);
+                log
+                    .info(
+                        "POST_TOOL hook processing completed. Original output length: {}, Processed output length: {}",
+                        String.valueOf(toolOutput).length(),
+                        processedOutput != null ? String.valueOf(processedOutput).length() : "null"
+                    );
+                return processedOutput != null ? processedOutput : toolOutput;
+            } catch (Exception e) {
+                log.error("Failed to emit POST_TOOL hook event", e);
+                return toolOutput; // Return original output on error
+            }
+        }
+        log.warn("No hook registry available, returning original tool output");
+        return toolOutput; // Return original output if no hook registry
+    }
+
+    /**
+     * Emit PRE_LLM hook event and update context
+     */
+    private void emitPreLLMHook(Map<String, String> parameters, List<String> interactions, List<MLToolSpec> toolSpecs, Memory memory) {
+        if (hookRegistry != null) {
+            try {
+
+                ContextManagerContext context = buildContextManagerContext(parameters, interactions, toolSpecs, memory);
+                PreLLMEvent event = new PreLLMEvent(context, new HashMap<>());
+                hookRegistry.emit(event);
+
+                // Update parameters with any changes made by context managers
+                updateParametersFromContext(parameters, context);
+                log.debug("Emitted PRE_LLM hook event and updated context");
+            } catch (Exception e) {
+                log.error("Failed to emit PRE_LLM hook event", e);
+                // Continue execution even if hook fails
+            }
+        }
+    }
+
+    /**
+     * Update interactions list with processed results from context
+     */
+    private void updateInteractionsFromContext(List<String> interactions, ContextManagerContext context) {
+        if (context.getToolInteractions() != null) {
+            interactions.clear();
+            for (Map<String, Object> toolInteraction : context.getToolInteractions()) {
+                Object output = toolInteraction.get("output");
+                if (output instanceof String) {
+                    interactions.add((String) output);
+                }
+            }
+        }
+    }
+
+    /**
+     * Update parameters from transformed context
+     */
+    private void updateParametersFromContext(Map<String, String> parameters, ContextManagerContext context) {
+        // Update system prompt if changed
+        if (context.getSystemPrompt() != null) {
+            parameters.put(SYSTEM_PROMPT_FIELD, context.getSystemPrompt());
+        }
+
+        // Update user prompt if changed
+        if (context.getUserPrompt() != null) {
+            parameters.put(MLAgentExecutor.QUESTION, context.getUserPrompt());
+        }
+
+        // Update chat history if changed
+        if (context.getChatHistory() != null && !context.getChatHistory().isEmpty()) {
+            // Convert interactions back to chat history string
+            // TODO this need more consideration with memory index
+            // StringBuilder chatHistoryBuilder = new StringBuilder();
+            // String chatHistoryPrefix = parameters.getOrDefault(PROMPT_CHAT_HISTORY_PREFIX, CHAT_HISTORY_PREFIX);
+            // chatHistoryBuilder.append(chatHistoryPrefix);
+            //
+            // for (Interaction interaction : context.getChatHistory()) {
+            // if (interaction.getInput() != null && interaction.getResponse() != null) {
+            // chatHistoryBuilder.append("Human: ").append(interaction.getInput()).append("\n");
+            // chatHistoryBuilder.append("Assistant: ").append(interaction.getResponse()).append("\n");
+            // }
+            // }
+            // parameters.put(CHAT_HISTORY, chatHistoryBuilder.toString());
+        }
+
+        // Update tool interactions if changed by context management
+        if (context.getToolInteractions() != null && !context.getToolInteractions().isEmpty()) {
+            List<String> updatedInteractions = new ArrayList<>();
+            for (Map<String, Object> toolInteraction : context.getToolInteractions()) {
+                Object output = toolInteraction.get("output");
+                if (output instanceof String) {
+                    updatedInteractions.add((String) output);
+                }
+            }
+            if (!updatedInteractions.isEmpty()) {
+                // Update the _interactions parameter with processed tool outputs
+                parameters.put(INTERACTIONS, ", " + String.join(", ", updatedInteractions));
+            }
+        }
+
+        // Update any additional parameters
+        if (context.getParameters() != null) {
+            for (Map.Entry<String, Object> entry : context.getParameters().entrySet()) {
+                if (entry.getValue() instanceof String) {
+                    parameters.put(entry.getKey(), (String) entry.getValue());
+                }
+            }
+        }
+    }
+
 }
